# vulkys

./: .gitignore  Cargo.toml  README.md  \  objects.json  out.kern_stacks  todo.md
.VSCodeCounter/2023-03-22_13-16-11/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-03-23_23-08-51/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-04-23_14-31-32/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.ssh/: soft_serve_server_ed25519  soft_serve_server_ed25519.pub
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/angular/: all.html  index.html
examples/: three_color_circles.rs
src/: angular.rs  boundary.rs  collision_definition.rs  collision_detection.rs  data_structures.rs  datastructures.rs  definition.rs  detection.rs  ffmpeg.rs  lib.rs  linearqueue.rs  main.rs  merge_sort.rs  motion.rs  painter.rs  resolve.rs  resolve_collisions.rs  rigidbodies.rs  stack.rs  step.rs  type_traits.rs  typetraits.rs  ui.rs  vector_transform.rs  vectortransform.rs  world.rs
src/core/: data_structures.rs  merge_sort.rs  mod.rs  parse.rs  type_traits.rs  vector_transform.rs
src/gui/: draw.rs  ui.rs
src/largefunctions/: step.rs
src/math/: vectortransform.rs
src/physics/: circle.rs  collision.rs  collision_definition.rs  collision_detection.rs  lib.rs  mod.rs  motion.rs  resolve_collisions.rs  rigidbodies.rs  rigidbody.rs  scene.rs  (+2 more)
(+39 files in other folders)
