[package]
name = "vulkys"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.21.0"
eframe = "0.21.3"
tracing-subscriber = "0.3"
tracing = "0.1.40"
libm = "0.2.6"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
image = "0.24"
winit = {version = "0.28.0", default-features = true}
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"]}
bytemuck = { version ="1.20.0", features = ["derive"]}

[profile.dev]
opt-level = 1

