[package]
name = "vulkys"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = "0.30.0"
# Vulkan and related
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = { version = "0.30.0" , features = ["rwh_05", "rwh_06"] }
raw-window-handle = "0.6.2"
image = "0.24"
bytemuck = { version ="1.20.0", features = ["derive"]}
# Utility
anyhow = "1.0.93"
tracing-subscriber = "0.3"
tracing = "0.1.40"
libm = "0.2.6"
ecolor = { version = "0.29.1", features = ["serde"] }

[profile.dev]
opt-level = 1
